--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         </div>
     </div> -->
 
-    <div class="container-video">
+    <div class="container-video video2">
         <h2>
             Encontre <span>veículos verificados e vistoriados:</span>
         </h2>
@@ -579,7 +579,7 @@
             clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="imagens-video">
                 <div>
-                    <img src='images/lupa.webp' alt="">
+                    <img src='images/lupa2.webp' alt="">
                     <p>
                         Pesquise ou <br>
                         crie filtro
@@ -587,7 +587,7 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/proposta.webp' alt="">
+                    <img src='images/proposta2.webp' alt="">
                     <p>
                         Faça uma <br>
                         proposta
@@ -595,7 +595,7 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/like.webp' alt="">
+                    <img src='images/like2.webp' alt="">
                     <p>
                         Proposta <br>
                         aceita?
@@ -603,7 +603,7 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/garantia.webp' alt="">
+                    <img src='images/garantido2.webp' alt="">
                     <p style="text-align: center;">
                         Garantia <br>
                         "Desista <br>
