tirando cabecalho desktop

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <header class="cabecalho-invisivel"></header>
 
-    <header class="cabecalho">
+    <!-- <header class="cabecalho">
         <div>
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar.webp' alt="EZCAR">
@@ -71,7 +71,6 @@
                                 <i class="fa-solid fa-square" href=".terceira_visao_3v"></i>
                                 3V Terceira Visão
                             </p>
-                            <!-- <span></span> -->
                         </a>
                     </div>
                 </div>
@@ -83,13 +82,9 @@
                     Blog
                     <span></span>
                 </a>
-                <!-- <a href="carreiras/index.html">
-                    Trabalhe Conosco
-                    <span></span>
-                </a> -->
             </nav>
         </div>
-    </header>
+    </header> -->
 
     <header class="cabecalho-mobile">
         <div>
