--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="
+    Em busca de comprar ou vender um veículo
+    seminovo ou usado, verificado e vistoriado,
+    com transparência e sem intermediários
+    caros? Conheça o EZCar, um app inovador
+    que veio para revolucionar o mercado,
+    possibilitando  o melhor preço e negociações
+    seguras.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -91,28 +98,30 @@
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar.webp' alt="EZCAR">
             </a>
-            <nav>
-                <a href=".ezcar">
-                    Como Funciona
+            <div>
+                <nav>
+                    <a href=".container-motivos">
+                        Por que o EZCar?
+                        <span></span>
+                    </a>
+                    <a href=".ezcar">
+                        Como Funciona
+                        <span></span>
+                    </a>
+                    <a href="">
+                        Receba Propostas
+                        <span></span>
+                    </a>
+                    <a href="">
+                        Encontre Veículos
+                        <span></span>
+                    </a>
+                </nav>
+                <div class="botao-mobile">
                     <span></span>
-                </a>
-                <a href=".container-motivos">
-                    Por que o EZCar?
                     <span></span>
-                </a>
-                <a href="">
-                    Receba Propostas
                     <span></span>
-                </a>
-                <a href="">
-                    Encontre Veículos
-                    <span></span>
-                </a>
-            </nav>
-            <div class="botao-mobile">
-                <span></span>
-                <span></span>
-                <span></span>
+                </div>
             </div>
         </div>
     </header>
@@ -127,12 +136,12 @@
         </a>
         <nav>
             <div class="parte-oculta">
-                <a href=".ezcar">
-                    Como Funciona
-                    <span></span>
-                </a>
                 <a href=".container-motivos">
                     Por que o EZCar?
+                    <span></span>
+                </a>
+                <a href=".ezcar">
+                    Como Funciona
                     <span></span>
                 </a>
                 <a href="">
@@ -148,7 +157,11 @@
                 Quem Somos
                 <span></span>
             </a>
-            <div class="dropdown">
+            <a href="fdsfd">
+                Parceiros
+                <span></span>
+            </a>
+            <!-- <div class="dropdown">
                 <p>Parceiros</p>
                 <div href=".terceira_visao_3v"> 
                     <a href=".terceira_visao_3v">
@@ -158,7 +171,7 @@
                         </p>
                     </a>
                 </div>
-            </div>
+            </div> -->
             <a href=".container-duvidas">
                 Perguntas Frequentes
                 <span></span>
@@ -444,25 +457,25 @@
             EZCAR
         </h2> -->
         <div class="produto-imagem-desktop">
-            <img src='images/ezcar_desktop.jpeg'>
+            <img src='images/ezcar_desktop.jpeg' alt="EZCar">
         </div>
         <div class="produto-imagem-mobile">
-            <img src='images/ezcar_mobile.jpeg'>
+            <img src='images/ezcar_mobile.jpeg' alt="EZCar">
         </div>
         <div class="produto-imagem-quadrada">
-            <img src='images/ezcar_quadrado.jpeg'>
+            <img src='images/ezcar_quadrado.jpeg' alt="EZCar">
         </div>
         <!-- <h2>
             *Antes de firmar o contrato de compra e venda.
         </h2> -->
     </div>
 
-    <div class="container-video">
+    <div class="container-video video1">
         <h2>
             Receba <span>as melhores propostas pelo seu veículo:</span>
         </h2>
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/QJ6j77GjdFQ?si=2rqAEK2Gg3L4VN0o" 
+            <iframe src="https://www.youtube.com/embed/T73a4zH3NRg?si=2XIYRaqnf5aHt3Gb" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="imagens-video">
@@ -477,9 +490,9 @@
                 <div>
                     <img src='images/pessoas.webp' alt="">
                     <p>
-                        Receba Propostas, <br> 
-                        com Transparência <br>
-                        e Segurança
+                        Receba propostas, <br> 
+                        com transparência <br>
+                        e segurança
                     </p>
                 </div>
                 <span></span>
@@ -487,7 +500,7 @@
                     <img src='images/like.webp' alt="">
                     <p>
                         Vistoria do <br>
-                        Veículo
+                        veículo
                     </p>
                 </div>
                 <span></span>
@@ -505,6 +518,9 @@
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
+            <p style="font-size: 1.5rem; font-weight: bold;">
+                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+            </p>
         </div>
     </div>
 
@@ -513,7 +529,7 @@
             Encontre <span>veículos verificados e vistoriados:</span>
         </h2>
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/QJ6j77GjdFQ?si=2rqAEK2Gg3L4VN0o" 
+            <iframe src="https://www.youtube.com/embed/70dHn6iOAjc?si=QQS2R1ANsfhwTlkI" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="imagens-video">
@@ -545,9 +561,8 @@
                 <div>
                     <img src='images/garantido2.webp' alt="">
                     <p style="text-align: center;">
-                        Garantia <br>
-                        "Desista <br>
-                        sem perguntas*"
+                        Desista <br>
+                        sem perguntas*
                     </p>
                 </div>
             </div>
@@ -557,6 +572,9 @@
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
+            <p style="font-size: 1.5rem; font-weight: bold;">
+                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+            </p>
         </div>
     </div>
 
@@ -674,7 +692,7 @@
                                 Cristor Redentor Rio de Janeiro
                             </p>
                         </div>
-                        <div class="center">
+                        <!-- <div class="center">
                             <iframe 
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
                             style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -728,7 +746,7 @@
                             <p>
                                 Cristor Redentor Rio de Janeiro
                             </p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
