--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         Como Funciona
                         <span></span>
                     </a>
-                    <a href="">
+                    <a href=".video1">
                         Receba Propostas
                         <span></span>
                     </a>
-                    <a href="">
+                    <a href=".video2">
                         Encontre Veículos
                         <span></span>
                     </a>
@@ -144,11 +144,11 @@
                     Como Funciona
                     <span></span>
                 </a>
-                <a href="">
+                <a href=".video1">
                     Receba Propostas
                     <span></span>
                 </a>
-                <a href="">
+                <a href=".video2">
                     Encontre Veículos
                     <span></span>
                 </a>
@@ -157,7 +157,7 @@
                 Quem Somos
                 <span></span>
             </a>
-            <a href="fdsfd">
+            <a href=".container-parceiros">
                 Parceiros
                 <span></span>
             </a>
@@ -518,9 +518,9 @@
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
-            <p style="font-size: 1.5rem; font-weight: bold;">
+            <!-- <p style="font-size: 1.5rem; font-weight: bold;">
                 Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
-            </p>
+            </p> -->
         </div>
     </div>
 
@@ -573,7 +573,7 @@
                 </a>
             </div>
             <p style="font-size: 1.5rem; font-weight: bold;">
-                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria*.
             </p>
         </div>
     </div>
