Transformando imagem ezcar em html

--- a/index.html
+++ b/index.html
@@ -452,10 +452,7 @@
         </div>
     </div>
 
-    <div class="ezcar produto">
-        <!-- <h2>
-            EZCAR
-        </h2> -->
+    <!-- <div class="ezcar produto">
         <div class="produto-imagem-desktop">
             <img src='images/ezcar_desktop.jpeg' alt="EZCar">
         </div>
@@ -465,9 +462,97 @@
         <div class="produto-imagem-quadrada">
             <img src='images/ezcar_quadrado.jpeg' alt="EZCar">
         </div>
-        <!-- <h2>
-            *Antes de firmar o contrato de compra e venda.
-        </h2> -->
+    </div> -->
+
+    <div class="container-ezcar">
+        <div>
+            <a href="{% url 'home' %}">
+                <img src='images/logo_ezcar2.webp' alt="EZCAR">
+            </a>
+            <h2>
+                BOM PARA QUEM VENDE. BOM PARA QUEM COMPRA
+            </h2>
+            <div class="ezcar">
+                <div>
+                    <p>
+                        Anuncie seu veículo gratuitamente, ou impulsione
+                        com destaque no app.
+                        <span style="top: 1.5rem; right: -3rem;">
+                            <img src="images/ideia.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Receba e aceite, ou recuse, as propostas de compra
+                        diretamente pelo chat do app, com transparência e segurança.
+                        <span style="top: 2.5rem; right: -3rem;">
+                            <img src="images/grafico.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Leve o seu veículo para ser visitado e vistoriado
+                        somente após o comprador confirmar o interesse. Não perca
+                        tempo com curiosos.
+                        <span style="top: 2.5rem; right: -3rem;">
+                            <img src="images/contrato.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Receba sem burocracia.
+                        <span style="top: 1.5rem; right: -3rem;">
+                            <img src="images/gostar.webp" alt="">
+                        </span>
+                    </p>
+                </div>
+                <img src='images/ezcar_home.webp' alt="">
+                <div>
+                    <p>
+                        Faça uma busca ou crie um filtro para
+                        encontrar o veículo que deseja.
+                        <span style="top: 1.5rem; left: -3rem;">
+                            <img src="images/alvo.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Faça e acompanhe sua proposta de compra diretamente pelo chat do app,
+                        com transparência e segurança.
+                        <span style="top: 2.5rem; left: -3rem;">
+                            <img src="images/moedas.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Verifique pessoalmente o veículo, que será vistoriado
+                        antes da quitação do negócio, caso você confirme a compra.
+                        <span style="top: 2.5rem; left: -3rem;">
+                            <img src="images/lupa2.webp" alt="">
+                        </span>
+                    </p>
+                    <p>
+                        Desista sem perguntas*,
+                        e receba o seu sinal de volta.
+                        <span style="top: 1.5rem; left: -3rem;">
+                            <img src="images/verifica.webp" alt="">
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="ezcar-valores">
+                <p>
+                    MELHOR PREÇO
+                </p>
+                <p>
+                    TRANSPARÊNCIA
+                </p>
+                <p>
+                    SEGURANÇA
+                </p>
+                <p>
+                    PROCEDÊNCIA
+                </p>
+            </div>
+            <p>
+                *Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+            </p>
+        </div>
     </div>
 
     <div class="container-video video1">
@@ -519,7 +604,7 @@
                 </a>
             </div>
             <!-- <p style="font-size: 1.5rem; font-weight: bold;">
-                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+                *Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
             </p> -->
         </div>
     </div>
@@ -572,7 +657,7 @@
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
-            <p style="font-size: 1.5rem; font-weight: bold;">
+            <p style="font-size: 1.5rem">
                 Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria*.
             </p>
         </div>
