Atualizacoes textos e icones

--- a/index.html
+++ b/index.html
@@ -60,39 +60,6 @@
 
     <header class="cabecalho-invisivel"></header>
 
-    <!-- <header class="cabecalho">
-        <div>
-            <a href="{% url 'home' %}">
-                <img src='images/logo_ezcar.webp' alt="EZCAR">
-            </a>
-            <nav>
-                <a href="https://ijavendi.com.br">
-                    Quem Somos
-                    <span></span>
-                </a>
-                <div class="dropdown">
-                    <p>Parceiros</p>
-                    <div href=".terceira_visao_3v"> 
-                        <a href=".terceira_visao_3v">
-                            <p href=".terceira_visao_3v">
-                                <i class="fa-solid fa-square" href=".terceira_visao_3v"></i>
-                                3V Terceira Visão
-                            </p>
-                        </a>
-                    </div>
-                </div>
-                <a href=".container-duvidas">
-                    Perguntas Frequentes
-                    <span></span>
-                </a>
-                <a href=".container-blog">
-                    Blog
-                    <span></span>
-                </a>
-            </nav>
-        </div>
-    </header> -->
-
     <header class="cabecalho-mobile">
         <div>
             <a href="{% url 'home' %}">
@@ -104,7 +71,7 @@
                         Por que o EZCar?
                         <span></span>
                     </a>
-                    <a href=".ezcar">
+                    <a href=".container-ezcar">
                         Como Funciona
                         <span></span>
                     </a>
@@ -140,7 +107,7 @@
                     Por que o EZCar?
                     <span></span>
                 </a>
-                <a href=".ezcar">
+                <a href=".container-ezcar">
                     Como Funciona
                     <span></span>
                 </a>
@@ -452,25 +419,13 @@
         </div>
     </div>
 
-    <!-- <div class="ezcar produto">
-        <div class="produto-imagem-desktop">
-            <img src='images/ezcar_desktop.jpeg' alt="EZCar">
-        </div>
-        <div class="produto-imagem-mobile">
-            <img src='images/ezcar_mobile.jpeg' alt="EZCar">
-        </div>
-        <div class="produto-imagem-quadrada">
-            <img src='images/ezcar_quadrado.jpeg' alt="EZCar">
-        </div>
-    </div> -->
-
     <div class="container-ezcar">
         <div>
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar2.webp' alt="EZCAR">
             </a>
             <h2>
-                BOM PARA QUEM VENDE. BOM PARA QUEM COMPRA
+                BOM PARA QUEM VENDE. BOM PARA QUEM COMPRA.
             </h2>
             <div class="ezcar">
                 <div>
@@ -478,7 +433,7 @@
                         Anuncie seu veículo gratuitamente, ou impulsione
                         com destaque no app.
                         <span style="top: 1.5rem; right: -3rem;">
-                            <img src="images/ideia.webp" alt="">
+                            <img src="images/som2.webp" alt="">
                         </span>
                     </p>
                     <p>
@@ -489,7 +444,7 @@
                         </span>
                     </p>
                     <p>
-                        Leve o seu veículo para ser visitado e vistoriado
+                        Leve o seu veículo para ser visitado e *vistoriado*
                         somente após o comprador confirmar o interesse. Não perca
                         tempo com curiosos.
                         <span style="top: 2.5rem; right: -3rem;">
@@ -499,7 +454,7 @@
                     <p>
                         Receba sem burocracia.
                         <span style="top: 1.5rem; right: -3rem;">
-                            <img src="images/gostar.webp" alt="">
+                            <img src="images/moedas.webp" alt="">
                         </span>
                     </p>
                 </div>
@@ -509,7 +464,7 @@
                         Faça uma busca ou crie um filtro para
                         encontrar o veículo que deseja.
                         <span style="top: 1.5rem; left: -3rem;">
-                            <img src="images/alvo.webp" alt="">
+                            <img src="images/lupa2.webp" alt="">
                         </span>
                     </p>
                     <p>
@@ -523,14 +478,14 @@
                         Verifique pessoalmente o veículo, que será vistoriado
                         antes da quitação do negócio, caso você confirme a compra.
                         <span style="top: 2.5rem; left: -3rem;">
-                            <img src="images/lupa2.webp" alt="">
+                            <img src="images/gostar.webp" alt="">
                         </span>
                     </p>
                     <p>
-                        Desista sem perguntas*,
+                        Desista sem perguntas**,
                         e receba o seu sinal de volta.
                         <span style="top: 1.5rem; left: -3rem;">
-                            <img src="images/verifica.webp" alt="">
+                            <img src="images/garantido2.webp" alt="">
                         </span>
                     </p>
                 </div>
@@ -550,14 +505,17 @@
                 </p>
             </div>
             <p>
-                *Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
+                *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
+            </p>
+            <p>
+                **Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
             </p>
         </div>
     </div>
 
     <div class="container-video video1">
         <h2>
-            Receba <span>as melhores propostas pelo seu veículo:</span>
+            Receba <span>as melhores propostas pelo seu veículo</span>
         </h2>
         <div class="video">
             <iframe src="https://www.youtube.com/embed/T73a4zH3NRg?si=2XIYRaqnf5aHt3Gb" 
@@ -573,7 +531,7 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/pessoas.webp' alt="">
+                    <img src='images/grafico2.webp' alt="">
                     <p>
                         Receba propostas, <br> 
                         com transparência <br>
@@ -582,15 +540,15 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/like.webp' alt="">
+                    <img src='images/proposta.webp' alt="">
                     <p>
-                        Vistoria do <br>
+                        Vistoria* do <br>
                         veículo
                     </p>
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/cartao.webp' alt="">
+                    <img src='images/moedas2.webp' alt="">
                     <p>
                         Pagamento sem <br>
                         burocracia
@@ -603,15 +561,15 @@
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
-            <!-- <p style="font-size: 1.5rem; font-weight: bold;">
-                *Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
-            </p> -->
+            <p>
+                *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
+            </p>
         </div>
     </div>
 
     <div class="container-video video2">
         <h2>
-            Encontre <span>veículos verificados e vistoriados:</span>
+            Encontre <span>veículos verificados e *vistoriados*</span>
         </h2>
         <div class="video">
             <iframe src="https://www.youtube.com/embed/70dHn6iOAjc?si=QQS2R1ANsfhwTlkI" 
@@ -627,7 +585,7 @@
                 </div>
                 <span></span>
                 <div>
-                    <img src='images/proposta2.webp' alt="">
+                    <img src='images/moedas.webp' alt="">
                     <p>
                         Faça e acompanhe <br> 
                         a sua proposta, <br>
@@ -647,7 +605,7 @@
                     <img src='images/garantido2.webp' alt="">
                     <p style="text-align: center;">
                         Desista <br>
-                        sem perguntas*
+                        sem perguntas**
                     </p>
                 </div>
             </div>
@@ -658,7 +616,10 @@
                 </a>
             </div>
             <p style="font-size: 1.5rem">
-                Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria*.
+                *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
+            </p>
+            <p style="font-size: 1.5rem">
+                **Antes de firmar o contrato de compra e venda, ou caso seja identificado um vício na vistoria.
             </p>
         </div>
     </div>
@@ -835,9 +796,9 @@
                     </div>
                 </div>
             </div>
-            <h2>
-                Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
-            </h2>
+            <!-- <h2>   -> colocar frase na area admin
+                *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
+            </h2> -->
         </div>
     </div>
 
