Atualizacao erros ortograficos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="
     Em busca de comprar ou vender um veículo
     seminovo ou usado, verificado e vistoriado,
@@ -13,7 +11,6 @@
     que veio para revolucionar o mercado,
     possibilitando  o melhor preço e negociações
     seguras.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css" integrity="sha512-cHxvm20nkjOUySu7jdwiUxgGy11vuVPE9YeK89geLMLMMEOcKFyS2i+8wo0FOwyQO/bL8Bvq1KMsqK4bbOsPnA==" 
@@ -424,10 +421,10 @@
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar2.webp' alt="EZCAR">
             </a>
-            <h2>
+            <h2 style="margin: 0 0 1rem 0;">
                 BOM PARA QUEM VENDE. BOM PARA QUEM COMPRA.
             </h2>
-            <div class="ezcar">
+            <div class="ezcar" style="margin: 1rem 0 0.5rem 0;">
                 <div>
                     <p>
                         Anuncie seu veículo gratuitamente, ou impulsione
@@ -444,7 +441,7 @@
                         </span>
                     </p>
                     <p>
-                        Leve o seu veículo para ser visitado e *vistoriado*
+                        Leve o seu veículo para ser visitado e vistoriado*
                         somente após o comprador confirmar o interesse. Não perca
                         tempo com curiosos.
                         <span style="top: 2.5rem; right: -3rem;">
@@ -490,7 +487,7 @@
                     </p>
                 </div>
             </div>
-            <div class="ezcar-valores">
+            <div class="ezcar-valores" style="margin: 0.5rem 0 0 0;">
                 <p>
                     MELHOR PREÇO
                 </p>
@@ -504,7 +501,7 @@
                     PROCEDÊNCIA
                 </p>
             </div>
-            <p>
+            <p style="margin: 1.5rem 0 0 0;">
                 *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
             </p>
             <p>
@@ -521,7 +518,7 @@
             <iframe src="https://www.youtube.com/embed/T73a4zH3NRg?si=2XIYRaqnf5aHt3Gb" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="imagens-video">
+            <div class="imagens-video" style="margin: 1rem 0 0.5rem 0;">
                 <div>
                     <img src='images/som.webp' alt="">
                     <p>
@@ -555,7 +552,7 @@
                     </p>
                 </div>
             </div>
-            <div class="motivos-imagens">
+            <div class="motivos-imagens" style="margin: 1rem 0 0.5rem 0;">
                 <!-- <img src='images/baixe_ezcar.webp' alt=""> -->
                 <a href="">
                     <img src='images/google_play.webp' alt="">
@@ -569,13 +566,13 @@
 
     <div class="container-video video2">
         <h2>
-            Encontre <span>veículos verificados e *vistoriados*</span>
+            Encontre <span>veículos verificados e vistoriados*</span>
         </h2>
         <div class="video">
             <iframe src="https://www.youtube.com/embed/70dHn6iOAjc?si=QQS2R1ANsfhwTlkI" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
             clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="imagens-video">
+            <div class="imagens-video" style="margin: 1rem 0 0.5rem 0;">
                 <div>
                     <img src='images/lupa2.webp' alt="">
                     <p>
@@ -609,13 +606,13 @@
                     </p>
                 </div>
             </div>
-            <div class="motivos-imagens">
+            <div class="motivos-imagens" style="margin: 1rem 0 0.5rem 0;">
                 <!-- <img src='images/baixe_ezcar.webp' alt=""> -->
                 <a href="">
                     <img src='images/google_play.webp' alt="">
                 </a>
             </div>
-            <p style="font-size: 1.5rem">
+            <p style="font-size: 1.5rem; margin: 1rem 0 0.5rem 0;">
                 *Todos os veículos anunciados no EZCar são vistoriados antes da conclusão da compra e venda!
             </p>
             <p style="font-size: 1.5rem">
