Atualizacoes pagina blog

--- a/blog.html
+++ b/blog.html
@@ -63,24 +63,12 @@
                 <img src='images/logo_ezcar.webp' alt="EZCAR">
             </a>
             <div>
-                <nav>
-                    <a href=".container-motivos">
-                        Por que o EZCar?
-                        <span></span>
-                    </a>
-                    <a href=".container-ezcar">
-                        Como Funciona
-                        <span></span>
-                    </a>
-                    <a href=".video1">
-                        Receba Propostas
-                        <span></span>
-                    </a>
-                    <a href=".video2">
-                        Encontre Veículos
-                        <span></span>
-                    </a>
-                </nav>
+                <form method="POST" action="">
+                    <input type="search" name="search" id="search" placeholder="O que você procura?">
+                    <label for="search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </label>
+                </form>
                 <div class="botao-mobile">
                     <span></span>
                     <span></span>
@@ -99,53 +87,38 @@
             <img src='images/logo_ezcar.webp' alt="EZCAR">
         </a>
         <nav>
-            <div class="parte-oculta">
-                <a href=".container-motivos">
-                    Por que o EZCar?
-                    <span></span>
-                </a>
-                <a href=".container-ezcar">
-                    Como Funciona
-                    <span></span>
-                </a>
-                <a href=".video1">
-                    Receba Propostas
-                    <span></span>
-                </a>
-                <a href=".video2">
-                    Encontre Veículos
-                    <span></span>
-                </a>
-            </div>
-            <a href="https://ijavendi.com.br">
-                Quem Somos
+            <form method="POST" action="">
+                <input type="search" name="search" id="search" placeholder="O que você procura?">
+                <label for="search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </label>
+            </form>
+            <a href=".container-motivos">
+                Por que o EZCar?
+                <span></span>
+            </a>
+            <a href=".container-ezcar">
+                Como Funciona
+                <span></span>
+            </a>
+            <a href=".video1">
+                Quero vender
+                <span></span>
+            </a>
+            <a href=".video2">
+                Quero comprar
                 <span></span>
             </a>
             <a href=".container-parceiros">
                 Parceiros
                 <span></span>
             </a>
-            <!-- <div class="dropdown">
-                <p>Parceiros</p>
-                <div href=".terceira_visao_3v"> 
-                    <a href=".terceira_visao_3v">
-                        <p href=".terceira_visao_3v">
-                            <i class="fa-solid fa-square" href=".terceira_visao_3v"></i>
-                            3V Terceira Visão
-                        </p>
-                    </a>
-                </div>
-            </div> -->
             <a href=".container-duvidas">
-                Perguntas Frequentes
+                Perguntas frequentes
                 <span></span>
             </a>
-            <a href="">
-                Seja um EZCar Center
-                <span></span>
-            </a>
-            <a href="">
-                Blog
+            <a href="https://ijavendi.com.br">
+                Quem somos
                 <span></span>
             </a>
         </nav>
