--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div>
                 <nav>
                     <a href=".container-motivos">
-                        Por que o EZCar?
+                        Por que o EZCar
                         <span></span>
                     </a>
                     <a href=".container-ezcar">
@@ -101,7 +101,7 @@
         <nav>
             <div class="parte-oculta">
                 <a href=".container-motivos">
-                    Por que o EZCar?
+                    Por que o EZCar
                     <span></span>
                 </a>
                 <a href=".container-ezcar">
@@ -184,7 +184,7 @@
         <div>
             <div class="motivos">
                 <h2>
-                    Motivos para <span>fazer negócio pelo EZCar:</span>
+                    Motivos para <span>fazer negócio pelo EZCar</span>
                 </h2>
                 <div class="grid-motivos">
                     <img src="images/carro4.webp" alt="">
@@ -726,7 +726,7 @@
                     <div class="centers">
                         <div class="center">
                             <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.403594262553!2d-45.88828532387925!3d-23.191957848126517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4a154ef80471%3A0x7f3490a8c910a4b!2sR.%20Eucl%C3%ADdes%20Miragaia%2C%20700%20-%20Centro%2C%20S%C3%A3o%20Jos%C3%A9%20dos%20Campos%20-%20SP%2C%2012245-820!5e0!3m2!1spt-BR!2sbr!4v1697485878349!5m2!1spt-BR!2sbr" 
                             style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <h6>
                                 Unidade Y Cristo Redentor
@@ -735,61 +735,6 @@
                                 Cristor Redentor Rio de Janeiro
                             </p>
                         </div>
-                        <!-- <div class="center">
-                            <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
-                            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <h6>
-                                Unidade Y Cristo Redentor
-                            </h6>
-                            <p>
-                                Cristor Redentor Rio de Janeiro
-                            </p>
-                        </div>
-                        <div class="center">
-                            <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
-                            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <h6>
-                                Unidade Y Cristo Redentor
-                            </h6>
-                            <p>
-                                Cristor Redentor Rio de Janeiro
-                            </p>
-                        </div>
-                        <div class="center">
-                            <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
-                            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <h6>
-                                Unidade Y Cristo Redentor
-                            </h6>
-                            <p>
-                                Cristor Redentor Rio de Janeiro
-                            </p>
-                        </div>
-                        <div class="center">
-                            <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
-                            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <h6>
-                                Unidade Y Cristo Redentor
-                            </h6>
-                            <p>
-                                Cristor Redentor Rio de Janeiro
-                            </p>
-                        </div>
-                        <div class="center">
-                            <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8738.014906374037!2d-43.21036750946485!3d-22.954546482131477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997fd5984aa13f%3A0x9dc984d7019502de!2sCristo%20Redentor!5e0!3m2!1spt-BR!2sbr!4v1695834037889!5m2!1spt-BR!2sbr" 
-                            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <h6>
-                                Unidade Y Cristo Redentor
-                            </h6>
-                            <p>
-                                Cristor Redentor Rio de Janeiro
-                            </p>
-                        </div> -->
                     </div>
                 </div>
             </div>
