--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,9 @@
         <div>
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar.webp' alt="EZCAR">
+                <p>
+                    Blog
+                </p>
             </a>
             <div>
                 <form method="POST" action="">
@@ -85,6 +88,9 @@
         </div>
         <a href="{% url 'home' %}">
             <img src='images/logo_ezcar.webp' alt="EZCAR">
+            <p>
+                Blog
+            </p>
         </a>
         <nav>
             <form method="POST" action="">
