Atualizando a pagina ezcar center

--- a/ezcar_center.html
+++ b/ezcar_center.html
@@ -61,8 +61,21 @@
         <div>
             <a href="{% url 'home' %}">
                 <img src='images/logo_ezcar.webp' alt="EZCAR">
+                <p>
+                    Center
+                </p>
             </a>
             <div>
+                <nav>
+                    <a href="">
+                        Seja um EZCar Center
+                        <span></span>
+                    </a>
+                    <a href="">
+                        Benefícios e Responsabilidades
+                        <span></span>
+                    </a>
+                </nav>
                 <div class="botao-mobile">
                     <span></span>
                     <span></span>
@@ -80,36 +93,16 @@
         <a href="{% url 'home' %}">
             <img src='images/logo_ezcar.webp' alt="EZCAR">
             <p>
-                Blog
+                Center
             </p>
         </a>
         <nav>
-            <a href=".container-motivos">
-                Por que o EZCar?
+            <a href="">
+                Seja um EZCar Center
                 <span></span>
             </a>
-            <a href=".container-ezcar">
-                Como Funciona
-                <span></span>
-            </a>
-            <a href=".video1">
-                Quero vender
-                <span></span>
-            </a>
-            <a href=".video2">
-                Quero comprar
-                <span></span>
-            </a>
-            <a href=".container-parceiros">
-                Parceiros
-                <span></span>
-            </a>
-            <a href=".container-duvidas">
-                Perguntas frequentes
-                <span></span>
-            </a>
-            <a href="https://ijavendi.com.br">
-                Quem somos
+            <a href="">
+                Benefícios e Responsabilidades
                 <span></span>
             </a>
         </nav>
